--- a/src/blog.html
+++ b/src/blog.html
@@ -38,18 +38,79 @@
                 <a class="menu__links--link" href="#">Media</a>
 
                 <div class="menu__links--block-btn">
-                    <a class="menu__links--btn btn btn__white" href="#">Reserve Now</a>
+                    <a class="btn btn__white menu__links--btn" href="#">Reserve Now</a>
                 </div>
             </div>
         </div>
     </nav>
 
-    <header class="hero-parallax">
-
+    <header class="parallax-1 hero-blog">
+            <div class="hero-blog__containt">
+                <h1 class="title txt--white">
+                Orison Selected as a Finalist for CONNECT’s 30th Annual Most Innovative New Product Awards
+                </h1>
+                <p class="paragraph txt--white">November 15, 2017</p>
+                <a class="hero-blog__containt--btn btn btn__grey" href="#">Read article</a>
+            </div>
     </header>
+
+
 
     <main class="blog">
 
+        <div class="warrper">
+            <!-- //////////// Articles //////////// -->
+
+            <div class="articles">
+                <div class="articles__article">
+                    <img src="img/blog-cvr-9-26.jpg" alt="">
+                    <h2 class="articles__article--title">
+                        Orison Selected as a Finalist for CONNECT’s 30th Annual Most Innovative New Product Awards
+                    </h2>
+                    <p class="paragraph txt--blue-grey">
+                        November 15, 2017 by Melanie Venter
+                    </p>
+                    <p class="paragraph txt--black">
+                        Orison has been selected as a finalist in CONNECT’s Most Innovative New Product Awards in its Cleantech, Sustainability, and Energy category . CONNECT, a premier innovation company accelerator in San Diego that creates and scales great companies in the technology and life sciences sectors, continues its thirty-year tradition of celebrating innovation leaders in the local San […]
+                    </p>
+                    <a class="btn btn__grey" href="#">Read more</a>
+                </div>
+
+                <div class="articles__article">
+                    <img src="img/blog-post-4-12-500x300.jpg" alt="">
+                    <h2 class="articles__article--title">
+                        Orison Selected as a Finalist for CONNECT’s 30th Annual Most Innovative New Product Awards
+                    </h2>
+                    <p class="paragraph txt--blue-grey">
+                        November 15, 2017 by Melanie Venter
+                    </p>
+                    <p class="paragraph txt--black">
+                        Orison has been selected as a finalist in CONNECT’s Most Innovative New Product Awards in its Cleantech, Sustainability, and Energy category . CONNECT, a premier innovation company accelerator in San Diego that creates and scales great companies in the technology and life sciences sectors, continues its thirty-year tradition of celebrating innovation leaders in the local San […]
+                    </p>
+                    <a class="btn btn__grey" href="#">Read more</a>
+                </div>
+
+                <div class="articles__article">
+                    <img src="img/blog-3-24-500x300.jpg" alt="">
+                    <h2 class="articles__article--title">
+                        Orison Selected as a Finalist for CONNECT’s 30th Annual Most Innovative New Product Awards
+                    </h2>
+                    <p class="paragraph txt--blue-grey">
+                        November 15, 2017 by Melanie Venter
+                    </p>
+                    <p class="paragraph txt--black">
+                        Orison has been selected as a finalist in CONNECT’s Most Innovative New Product Awards in its Cleantech, Sustainability, and Energy category . CONNECT, a premier innovation company accelerator in San Diego that creates and scales great companies in the technology and life sciences sectors, continues its thirty-year tradition of celebrating innovation leaders in the local San […]
+                    </p>
+                    <a class="btn btn__grey" href="#">Read more</a>
+                </div>
+            </div>
+
+            <!-- //////////// Aside //////////// -->
+
+            <div class="aside">
+
+            </div>
+        </div>
     </main>
 
     <footer class="footer">
@@ -105,6 +166,7 @@
 
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/parallax.js/1.4.2/parallax.min.js"></script>
         <script src="plugin/scroll-reveal.js"></script>
         <script src="js/main.min.js"></script>
     </body>
