--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     </head>
     <body>
 
-    <nav class="menu">
+    <nav class="menu gradient">
 
         <div class="warrper menu__warrper">
             <div class="menu__mobile-bar">
@@ -160,14 +160,14 @@
 
 <section class="featured-quality">
     <div class="featured-quality__block block">
-        <div class="featured-quality__block--txt block--txt">
+        <div class="featured-quality__block--txt block--txt" data-scroll-reveal="true">
             <h3 class="title txt--white">Highly intelligent, network operated.</h3>
             <p class="paragraph txt--grey">Orison’s integrated Cloud network uses data including utility rates, peak demand charges, weather, blackout alerts, your usage profile, and more to determine the optimal operating schedule for your device. The Orison Cloud also works collectively to make the energy grid more efficient.</p>
 
             <a class="btn btn__white" href="#">Read up</a>
         </div>
 
-        <div class="featured-quality__block--img block--img">
+        <div class="featured-quality__block--img block--img" data-scroll-reveal="true">
             <img src="img/Orison-Panel-Series.jpg" alt="pricture of featured quality">
         </div>
     </div>
@@ -175,11 +175,11 @@
 
 
     <div class="featured-quality__block block">
-        <div class="featured-quality__block--img block--img">
+        <div class="featured-quality__block--img block--img" data-scroll-reveal="true">
             <img src="img/Orison-Tower-Cord.jpg" alt="pricture of featured quality">
         </div>
 
-        <div class="featured-quality__block--txt block--txt">
+        <div class="featured-quality__block--txt block--txt" data-scroll-reveal="true">
             <h3 class="title txt--white">No permits, wiring or construction.</h3>
             <p class="paragraph txt--grey">Orison is designed to be effortless to install and operate. Weighing less than 40 lbs., Orison can be mailed directly to your door. Simply plug it in like you would any other appliance, set-up with your Orison App, and you’re done.</p>
 
@@ -192,10 +192,10 @@
 <section class="reserve">
     <div class="warrper">
         <div class="reserve__block txt--center">
-            <img class="reserve__block--img" src="img/panelandtower.png" alt="">
-            <h2 class="title txt--white">Power your home and the future</h2>
-            <p class="big--paragraph txt--grey">Reserve Orison and get it first.</p>
-            <a class="btn btn__white" href="#">Reserve now</a>
+            <img class="reserve__block--img" src="img/panelandtower.png" alt="" data-scroll-reveal="true">
+            <h2 class="title txt--white" data-scroll-reveal="true">Power your home and the future</h2>
+            <p class="big--paragraph txt--grey" data-scroll-reveal="true">Reserve Orison and get it first.</p>
+            <a class="btn btn__white" href="#" data-scroll-reveal="true">Reserve now</a>
         </div>
     </div>
 </section>
@@ -203,23 +203,23 @@
 
 <section class="partner txt--center">
     <div class="warrper dfrr">
-        <div class="partner__thumb thumb">
+        <div class="partner__thumb thumb" data-scroll-reveal="true">
             <img class="partner__thumb--img" src="img/Time-logo-gray.svg" alt="">
             <p class="paragraph txt--black">“A chance of changing the way consumers and businesses interact with the electrical grid.”</p>
         </div>
 
 
-        <div class="partner__thumb thumb">
+        <div class="partner__thumb thumb" data-scroll-reveal="true">
             <img class="partner__thumb--img" src="img/Wired-press-logo-01-1.svg" alt="">
             <p class="paragraph txt--black">“You can install it on your own, inside the house, simply by plugging into an ordinary electrical socket.”</p>
         </div>
 
 
-        <div class="partner__thumb thumb">
+        <div class="partner__thumb thumb" data-scroll-reveal="true">
             <img class="partner__thumb--img" src="img/Business-Insider-Logo.svg" alt="">
             <p class="paragraph txt--black">“Users also get an app that lets them control how everything functions over the internet.”</p>
         </div>
-        <img src="img/Press-Logo-Strip-2280.png" alt="">
+        <img src="img/Press-Logo-Strip-2280.png" alt="" data-scroll-reveal="true">
     </div>
 </section>
 
