--- a/src/products.html
+++ b/src/products.html
@@ -65,7 +65,7 @@
 
     <section class="free-standing">
         <div class="warrper block">
-            <div class="free-standing__pic-block block--img">
+            <div class="free-standing__pic-block block--img" data-scroll-reveal="true">
                 <img src="img/Tower-Detail.png" alt="">
             </div>
             <div class="free-standing__containt block--txt">
@@ -73,8 +73,8 @@
                 <h3 class="title txt--white" data-scroll-reveal="true">Orison Tower</h3>
                 <p class="big--paragraph txt--grey" data-scroll-reveal="true">Our free-standing floor Tower adds customizable LED light to your indoor environment and includes a bluetooth speaker for stunning sound.</p>
 
-                <a class="btn btn__grey" href="#">Get it now</a>
-                <a class="btn btn__white" href="#">More info</a>
+                <a class="btn btn__grey" href="#" data-scroll-reveal="true">Get it now</a>
+                <a class="btn btn__white" href="#" data-scroll-reveal="true">More info</a>
             </div>
         </div>
     </section>
@@ -181,7 +181,7 @@
                 <h3 class="title txt--rem2 txt--white" data-scroll-reveal="true">Energy control at your fingertips.</h3>
                 <p class="paragraph txt--grey" data-scroll-reveal="true">Have control over your system and access to its insights, wherever you are. In the event of a power outage, know exactly when it happens and when the grid is restored and see the money your system saves you on energy.</p>
             </div>
-            <div class="mobile-app__pic-block block--img">
+            <div class="mobile-app__pic-block block--img" data-scroll-reveal="true">
                 <img src="img/iPhone6_mockup_front-1.png" alt="">
             </div>
         </div>
@@ -189,7 +189,7 @@
 
     <section class="cloud">
         <div class="warrper block">
-            <div class="cloud__pic-block block--img">
+            <div class="cloud__pic-block block--img" data-scroll-reveal="true">
                 <img src="img/Cloud-Graphic-1.png" alt="">
             </div>
             <div class="cloud__containt block--txt">
@@ -197,7 +197,7 @@
                 <h3 class="title txt--rem2 txt--black" data-scroll-reveal="true">Highly intelligent and fully networked.</h3>
                 <p class="paragraph txt--grey" data-scroll-reveal="true">Our free-standing floor Tower adds customizable LED light to your indoor environment and includes a bluetooth speaker for stunning sound.</p>
 
-                <a class="btn btn__grey" href="#">Read more</a>
+                <a class="btn btn__grey" href="#" data-scroll-reveal="true">Read more</a>
             </div>
         </div>
     </section>
@@ -206,10 +206,10 @@
         <section class="reserve">
             <div class="warrper">
                 <div class="reserve__block txt--center">
-                    <img class="reserve__block--img" src="img/panelandtower.png" alt="">
-                    <h2 class="title txt--white">Power your home and the future</h2>
-                    <p class="big--paragraph txt--grey">Reserve Orison and get it first.</p>
-                    <a class="btn btn__white" href="#">Reserve now</a>
+                    <img class="reserve__block--img" src="img/panelandtower.png" alt="" data-scroll-reveal="true">
+                    <h2 class="title txt--white" data-scroll-reveal="true">Power your home and the future</h2>
+                    <p class="big--paragraph txt--grey" data-scroll-reveal="true">Reserve Orison and get it first.</p>
+                    <a class="btn btn__white" href="#" data-scroll-reveal="true">Reserve now</a>
                 </div>
             </div>
         </section>
